--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 <input type="text" name="ips"><br>
  IPs fraction:<br>
 <input type="text" name="ipFrac"><br>
- Protocols:<br>
+ Bandwidth:<br>
 <input type="text" name="Bandwidth"><br>
 <input type="submit" value="input_submit" name="action"><br>
 <h3>Query Configuration</h3>
@@ -54,5 +54,4 @@ BandwidthH/%:<br>
 </script>
 </body>
 </body>
-
 </html>
