add input data str support

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>ZNS</title>
   <script type="text/javascript" src="http://echarts.baidu.com/dist/echarts.js"></script>
-  <script type="text/javascript" src="http://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js"></script> 
+  <script type="text/javascript" src="http://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
 
 
@@ -15,14 +15,10 @@
     <h1>ZNS</h1><br>
     <h3>Input configuration:</h3>
     <form method="POST">
-        Protocols:<br>
-        <input type="text" name="pro"><br> Protocols fraction:<br>
-        <input type="text" name="proFrac"><br> IPs:
-        <br>
-        <input type="text" name="ips"><br> IPs fraction:<br>
-        <input type="text" name="ipFrac"><br> Bandwidth:
-        <br>
-        <input type="text" name="Bandwidth"><br>
+        Protocols:<br><input type="text" name="pro"><br> Protocols fraction:<br><input type="text" name="pro_frac"><br>
+        IPs:<br><input type="text" name="ips"><br>
+        IPs fraction:<br><input type="text" name="ip_frac"><br>
+        Bandwidth:<br><input type="text" name="bandwidth"><br>
         <input type="submit" value="input_submit" name="action"><br>
         <h3>Query Configuration</h3>
         <input type="radio" name="query_type" value="IP"> IP<br>
@@ -67,7 +63,7 @@
   }
 </script>
 
-<!-- <script type="text/javascript" src="../js/chart-1.js"></script> 
+<!-- <script type="text/javascript" src="../js/chart-1.js"></script>
  -->
 
 
