--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,8 @@
   }
 </script>
 
-<script type="text/javascript" src="../js/chart-1.js"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='chart-1.js') }}"></script>
+
 
 
 
