--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
   }
 </script>
 
-<script type="text/javascript" src="{{ url_for('static', filename='chart-1.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='charts.js') }}"></script>
 
 
 
